--- a/index.html
+++ b/index.html
@@ -221,35 +221,35 @@
                     </div>
                     <div class="bars skills-card">
                         <div class="info">
-                            <img class="skills-card-img" src="/images/skills/icons8-react.svg" alt="Java">
+                            <img class="skills-card-img" src="/Portfolio/images/skills/icons8-react.svg" alt="Java">
                             <span class="skills-card-name">React</span>
                         </div>
 
                     </div>
                     <div class="bars skills-card">
                         <div class="info">
-                            <img class="skills-card-img" src="/images/skills/icons8-redux-96.png" alt="Java">
+                            <img class="skills-card-img" src="/Portfolio/images/skills/icons8-redux-96.png" alt="Java">
                             <span class="skills-card-name">Redux</span>
                         </div>
 
                     </div>
                     <div class="bars skills-card">
                         <div class="info">
-                            <img class="skills-card-img" src="/images/skills/icons8-mongo-db-96.png" alt="Java">
+                            <img class="skills-card-img" src="/Portfolio/images/skills/icons8-mongo-db-96.png" alt="Java">
                             <span class="skills-card-name">Mongo db</span>
                         </div>
 
                     </div>
                     <div class="bars skills-card">
                         <div class="info">
-                            <img class="skills-card-img" src="/images/skills/icons8-mysql-logo-96.svg" alt="Springboot">
+                            <img class="skills-card-img" src="/Portfolio/images/skills/icons8-mysql-logo-96.svg" alt="MySqL">
                             <span class="skills-card-name">MySqL</span>
                         </div>
 
                     </div>
                     <div class="bars skills-card">
                         <div class="info">
-                            <img class="skills-card-img" src="/images/skills/icons8-nodejs-96.png" alt="hibernate">
+                            <img class="skills-card-img" src="/Portfolio/images/skills/icons8-nodejs-96.png" alt="hibernate">
                             <span class="skills-card-name">Node JS</span>
                         </div>
 
